Began implementing typeahead, it is not currently fully functional and serves as placeholder code.

--- a/src/Bundle/WebBundle/Resources/views/forms.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/forms.html.twig
@@ -5,139 +5,12 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'form_div_layout.html.twig' %}
+{% extends 'MopaBootstrapBundle:Form:fields.html.twig' %}
 
-{% block checkbox_widget %}
-{% spaceless %}
-    <label for="{{ id }}"><input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />{{ label|trans }}</label>
-{% endspaceless %}
-{% endblock checkbox_widget %}
+{% block typeahead_widget %}
+    {% set attr = attr|merge({
+        'data-typeahead': typeahead|json_encode
+    }) %}
+    {{ block('form_widget') }}
+{% endblock typeahead_widget %}
 
-{% block radio_widget %}
-{% spaceless %}
-    <label for="{{ id }}"><input type="radio" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />{{ label|trans }}</label>
-{% endspaceless %}
-{% endblock radio_widget %}
-
-{% block choice_widget_collapsed %}
-{% set attr = attr|merge({'class': attr.class|default('') ~ ' form-control'}) %}
-{{ parent() }}
-{% endblock choice_widget_collapsed %}
-
-{% block textarea_widget %}
-{% set attr = attr|merge({'class': attr.class|default('') ~ ' form-control'}) %}
-{{ parent() }}
-{% endblock textarea_widget %}
-
-{% block form_widget_simple %}
-{% spaceless %}
-    {% set attr = attr|merge({'class': attr.class|default('') ~ ' form-control'}) %}
-    {% set type = type|default('text') %}
-
-    {% if 'file' == type %}
-        <span class="btn-primary btn-lg file-overlay"><i class="icon-folder-open"></i> {{ 'sylius.form.choose_file'|trans }}</span>
-    {% endif %}
-    {{ parent() }}
-{% endspaceless %}
-{% endblock form_widget_simple %}
-
-{% block form_label %}
-{% spaceless %}
-    {% set label_attr = label_attr|merge({'class': label_attr.class|default('') ~ ' control-label'}) %}
-    {{ parent() }}
-{% endspaceless %}
-{% endblock form_label %}
-
-{% block money_widget %}
-{% spaceless %}
-    <div class="input-group">
-        <span class="input-group-addon">{{ money_pattern|replace({'{{ widget }}': ''}) }}</span>
-        {{ block('form_widget_simple') }}
-    </div>
-{% endspaceless %}
-{% endblock money_widget %}
-
-{% block percent_widget %}
-{% spaceless %}
-    <div class="input-group">
-        <span class="input-group-addon">%</span>
-        {{ block('form_widget_simple') }}
-    </div>
-{% endspaceless %}
-{% endblock percent_widget %}
-
-{% block datetime_widget %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        <div class="form-group">
-        {{ form_widget(form.date) }}
-        {{ form_widget(form.time) }}
-        </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock datetime_widget %}
-
-{% block date_widget %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-            {{ '{{ year }} / {{ month }} / {{ day }}'|replace({
-            '{{ year }}':  form_widget(form.year, {'attr': {'style': 'display: inline; width: 100px;'}}),
-            '{{ month }}': form_widget(form.month, {'attr': {'style': 'display: inline; width: 100px;'}}),
-            '{{ day }}':   form_widget(form.day, {'attr': {'style': 'display: inline; width: 100px;'}}),
-            })|raw }}
-    {% endif %}
-{% endspaceless %}
-{% endblock date_widget %}
-
-{% block time_widget %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        {% set vars = widget == 'text' ? { 'attr': { 'size': 1, 'style': 'width: 60px; display: inline;' }} : {} %}
-        &nbsp;{{ form_widget(form.hour, vars) }}{% if with_minutes %}:{{ form_widget(form.minute, vars) }}{% endif %}{% if with_seconds %} {{ form_widget(form.second, vars) }}{% endif %}
-    {% endif %}
-{% endspaceless %}
-{% endblock time_widget %}
-
-{% block form_row %}
-{% spaceless %}
-    {% if 'checkbox' in types %}
-    <div class="checkbox{% if errors|length > 0 %} has-error{% endif %}{% if disabled %} disabled{% endif %}">
-        {{ block('checkbox_widget') }}
-    </div>
-    {% elseif 'radio' in types %}
-    <div class="radio{% if errors|length > 0 %} has-error{% endif %}{% if disabled %} disabled{% endif %}">
-        {{ block('radio_widget') }}
-    </div>
-    {% else %}
-    <div class="form-group{% if errors|length > 0 %} has-error{% endif %}">
-        {{ form_label(form) }}
-        {{ form_widget(form) }}
-        {% for error in errors %}
-            <span class="help-block form-error">
-                {{
-                    error.messagePluralization is null
-                    ? error.messageTemplate|trans(error.messageParameters, 'validators')
-                    : error.messageTemplate|transchoice(error.messagePluralization, error.messageParameters, 'validators')
-                }}
-            </span>
-        {% endfor %}
-    </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock form_row %}
-
-{% block form_errors %}
-{% spaceless %}
-    {% if errors|length > 0 %}
-        {% for error in errors %}
-            <div class="alert alert-danger">{{ error.message }}</div>
-        {% endfor %}
-    {% endif %}
-{% endspaceless %}
-{% endblock form_errors %}
