--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
@@ -10,6 +10,7 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 {% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import generic %}
+{% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
 {% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
 
@@ -32,4 +33,22 @@
             </div>
         </div>
     </form>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ select_patient_js('#accard_activity_patient') }}
+{% endblock %}
+
+{% block page_javascripts %}
+<script type="text/javascript">
+    $('#accard_activity_patient').on('change', function(event) {
+        var patientId = event.added.id;
+    });
+</script>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ select_patient_css() }}
 {% endblock %}
