--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
@@ -9,6 +9,7 @@
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
+{% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
 {% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
 
@@ -21,11 +22,20 @@
         <input type="hidden" name="_method" value="PUT">
         {{ form_widget(form._token) }}
         {% include 'AccardWebBundle:Frontend/Activity:form.html.twig' %}
-        {{ form_rest(form) }}
         <div class="row">
             <div class="col-md-12">
                 <span class="pull-right">{{ update() }}</span>
             </div>
         </div>
     </form>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ select_patient_js('#accard_activity_patient') }}
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ select_patient_css() }}
 {% endblock %}
