--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/update.html.twig
@@ -9,6 +9,7 @@
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
+{% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
 {% block content %}
     {{ page_title('accard.interface.frontend.titles.update_diagnosis'|trans) }}
