--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
@@ -55,15 +55,15 @@
     <div class="tab-pane fade" id="patient-custom">
         <div class="row">
             <div class="col-md-6">
-            {% if row1fields is defined %}
-                {% for field in row1fields if count > 0 %}
+            {% if count > 0 %}
+                {% for field in row1fields %}
                     {{ render_field(field) }}
                 {% endfor %}
             {% endif %}
             </div>
             <div class="col-md-6">
-            {% if row2fields is defined %}            
-                {% for field in row2fields if count > 1 %}
+            {% if count > 1 %}
+                {% for field in row2fields %}
                     {{ render_field(field) }}
                 {% endfor %}
             {% endif %}
