--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
@@ -55,14 +55,18 @@
     <div class="tab-pane fade" id="patient-custom">
         <div class="row">
             <div class="col-md-6">
-            {% for field in row1fields if count > 0 %}
-                {{ render_field(field) }}
-            {% endfor %}
+            {% if row1fields is defined %}
+                {% for field in row1fields if count > 0 %}
+                    {{ render_field(field) }}
+                {% endfor %}
+            {% endif %}
             </div>
             <div class="col-md-6">
-            {% for field in row2fields if count > 1 %}
-                {{ render_field(field) }}
-            {% endfor %}
+            {% if row2fields is defined %}            
+                {% for field in row2fields if count > 1 %}
+                    {{ render_field(field) }}
+                {% endfor %}
+            {% endif %}
             </div>
         </div>
     </div>
