--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/form.html.twig
@@ -1,10 +1,13 @@
 {% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient %}
 
-<div class="row">
 {% if form.patient is defined %}
-    {{ select_patient(form.patient) }}
-{% endif %}
+<div class="row">
+    <div class="col-md-12">
+        {{ select_patient(form.patient) }}
+    </div>
 </div>
+{% endif %}
+
 <div class="row">
     <div class="col-md-6">
         {{ form_row(form.code) }}
