--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
@@ -10,17 +10,21 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 {% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import generic %}
+{% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
 {% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
 {% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
 
 
 {% block content %}
+
     {{ page_title('accard.activity.action.create'|trans,
         [
             generic(path('accard_frontend_activity_index'), 'accard.activity.action.manage'|trans, 'user')
         ]
     ) }}
+
+    {{ no_javascript() }}
 
     {{ form_errors(form) }}
 
