--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldCreate.html.twig
@@ -7,6 +7,7 @@
 
 {% extends 'AccardWebBundle:Backend:layout.html.twig' %}
 
+{% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import pagination, page_title, statistics %}
 
@@ -14,6 +15,7 @@
 
     {{ page_title('accard.activity_prototype_field.action.create'|trans) }}
 
+    {{ no_javascript() }}
     {{ form_errors(form) }}
 
     <form action="{{ path('accard_backend_activity_field_create') }}" method="post" {{ form_enctype(form) }}>
@@ -38,7 +40,8 @@
         .behavior('presentation', {
             target: 'name',
             condition: 'changed',
-            action: 'slug'
+            action: 'slug',
+            event: 'keyup'
         })
         .bindAll();
 </script>
