--- a/src/Bundle/WebBundle/Resources/views/Backend/Option/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Option/create.html.twig
@@ -7,12 +7,14 @@
 
 {% extends 'AccardWebBundle:Backend:layout.html.twig' %}
 
+{% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 {% block content %}
     {{ page_title('accard.interface.backend.titles.create_option'|trans) }}
 
+    {{ no_javascript() }}
     {{ form_errors(form) }}
     
     <form action="{{ path('accard_backend_option_create') }}" method="post" {{ form_enctype(form) }}>
@@ -37,7 +39,8 @@
         .behavior('presentation', {
             target: 'name',
             condition: 'changed',
-            action: 'slug'
+            action: 'slug',
+            event: 'keyup'
         })
         .bindAll();
 </script>
