Refactored patient phases forms and views for convenient data entry.

--- a/src/Bundle/WebBundle/Resources/views/Backend/Patient/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Patient/design.html.twig
@@ -64,6 +64,7 @@
                     <div class="panel-body">
                         {{ form_widget(settings_form.enabled) }}
                         {{ form_widget(settings_form.import_enabled) }}
+                        {{ form_widget(settings_form.collect_phases) }}
                     </div>
                 </div>
             </form>
