--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/formTabs.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/formTabs.html.twig
@@ -5,6 +5,12 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
+<div class="row pull-right">
+    <button id="add-phase" class="btn btn-success" style="display: none;"><i class = 'glyphicon glyphicon-plus'></i>
+        {{ 'accard.phase.action.add'|trans }}
+    </button>
+</div>
+
 <ul class="nav nav-tabs grid-tabs" role="tablist">
     <li class="active">
         <a href="#patient-base" role="tab" data-toggle="tab">{{ 'accard.interface.nav.patient.base'|trans }}</a>
@@ -12,7 +18,9 @@
     <li>
         <a href="#patient-custom" role="tab" data-toggle="tab">{{ 'accard.interface.nav.patient.custom'|trans }}</a>
     </li>
+    {% if accard_setting('patient.collect_phases') %}
     <li>
         <a href="#patient-phases" role="tab" data-toggle="tab">{{ 'accard.interface.nav.patient.phases'|trans }}</a>
     </li>
+    {% endif %}
 </ul>
