Added filtering to patient index, in doing so I came up with the methodology for allowing filtering.

--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
@@ -44,6 +44,8 @@
     {% endblock %}
 
     {% block patient_content %}
+        {% render(controller('AccardWebBundle:Frontend:filter', {'type': 'accard_patient_filter', 'template': 'AccardWebBundle:Frontend/Patient:filterForm.html.twig'})) %}
+        
         {{ list(patients) }}
         {{ pagination(patients) }}
     {% endblock %}
