--- a/src/Bundle/WebBundle/Resources/public/css/backend/custom.css
+++ b/src/Bundle/WebBundle/Resources/public/css/backend/custom.css
@@ -30,6 +30,39 @@ label.optional {
     display: inline;
 }
 
+/* Filter form */
+
+.filter-bar {
+    width: 100%;
+    height: 12px;
+    margin: 0;
+    background: rgba(0, 0, 0, 0.4);
+    display: inline-block;
+    text-align: center;
+    color: white;
+}
+
+.filter-bar:hover, .filter-bar.in {
+    background: #428bca;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.filter-bar .caret {
+    margin-top: -8px;
+}
+
+.form-filter {
+    background-color: #f1f1f1;
+    padding: 15px;
+    margin: -8px 0 10px 0;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.form-filter .row .form-group {
+    margin-right: 10px;
+    width: 100%;
+}
+
 /* Tabs */
 .grid-tabs {
     margin: 10px auto;
