--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
@@ -12,40 +12,38 @@
 {% from 'AccardWebBundle:Frontend/Patient:macros.html.twig' import list %}
 {% from 'AccardWebBundle:Common/Macros:url.html.twig' import active_if_current %}
 
-{%- set settings = accard_settings('patient') -%}
+{% set settings = accard_settings('patient') %}
 {% set designBtn = null %}
 {% if is_granted('ROLE_ADMIN') %}
     {% set designBtn = design(path('accard_backend_patient_design'), 'accard.patient.action.design'|trans) %}
 {% endif %}
 
 {% block content %}
-
     {% block patient_title %}
-    {{ page_title(
-        'accard.patient.title.index'|trans,
-        [
-            create(path('accard_frontend_patient_create'), 'accard.patient.action.create'|trans),
-            designBtn
-        ]
-    )}}
+        {{ page_title(
+            'accard.patient.title.index'|trans,
+            [
+                create(path('accard_frontend_patient_create'), 'accard.patient.action.create'|trans),
+                designBtn
+            ]
+        )}}
     {% endblock %}
 
     {% block patient_tabs %}
     {% if settings.import_enabled %}
-    <ul class="nav nav-tabs nav-justified grid-tabs" role="tablist">
-        <li class="{{ active_if_current('accard_frontend_patient_index') }}">
-            <a href="{{ path('accard_frontend_patient_index') }}">{{ 'accard.patient.registered'|trans }}</a>
-        </li>
-        <li class="{{ active_if_current('accard_frontend_patient_import') }}{{ active_if_current('accard_frontend_import_importer_records') }}">
-            <a href="{{ path('accard_frontend_patient_import') }}">{{ 'accard.patient.unregistered'|trans }}</a>
-        </li>
-    </ul>
+        <ul class="nav nav-tabs nav-justified grid-tabs" role="tablist">
+            <li class="{{ active_if_current('accard_frontend_patient_index') }}">
+                <a href="{{ path('accard_frontend_patient_index') }}">{{ 'accard.patient.registered'|trans }}</a>
+            </li>
+            <li class="{{ active_if_current('accard_frontend_patient_import') }}{{ active_if_current('accard_frontend_import_importer_records') }}">
+                <a href="{{ path('accard_frontend_patient_import') }}">{{ 'accard.patient.unregistered'|trans }}</a>
+            </li>
+        </ul>
     {% endif %}
     {% endblock %}
 
     {% block patient_content %}
         {% render(controller('AccardWebBundle:Frontend:filter', {'type': 'accard_patient_filter', 'template': 'AccardWebBundle:Frontend/Patient:filterForm.html.twig'})) %}
-        
         {{ list(patients) }}
         {{ pagination(patients) }}
     {% endblock %}
