Added PDS setting to patient schema, integrated with the PDS bundle very loosely.

--- a/src/Bundle/WebBundle/Resources/views/Backend/Patient/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Patient/design.html.twig
@@ -65,6 +65,7 @@
                         {{ form_widget(settings_form.enabled) }}
                         {{ form_widget(settings_form.import_enabled) }}
                         {{ form_widget(settings_form.collect_phases) }}
+                        {{ form_widget(settings_form.pds_enabled) }}
                     </div>
                 </div>
             </form>
