--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
@@ -10,6 +10,9 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
+{% set settings = accard_settings('patient') %}
+{% set pds = settings.pds_enabled is defined and settings.pds_enabled %}
+
 {% block content %}
     {{ page_title('accard.interface.frontend.titles.update_patient'|trans({ '%patient%': patient.firstName })) }}
 
@@ -28,6 +31,7 @@
 {% endblock %}
 
 {% block page_javascripts -%}
+    {% if pds %}<script type="text/javascript" src="{{ asset('bundles/accardpds/js/accard-pds.js') }}"></script>{% endif %}
     <script type="text/javascript">
         var formClass = Accard.get('form');
         var manager = new formClass('form');
