--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
@@ -11,10 +11,10 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 {% set settings = accard_settings('patient') %}
-{% set pds = settings.pds_enabled is defined and settings.pds_enabled %}
+{% set pds = false %}
 
 {% block content %}
-    {{ page_title('accard.interface.frontend.titles.update_patient'|trans({ '%patient%': patient.firstName })) }}
+    {{ page_title('accard.patient.action.update'|trans) }}
 
     {{ form_errors(form) }}
     
