Created interface for managing dx phases within dx forms. It is optionally disabled through the dx settings.

--- a/src/Bundle/WebBundle/Resources/views/Backend/Diagnosis/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Diagnosis/design.html.twig
@@ -62,6 +62,7 @@
                     </div>
                     <div class="panel-body">
                         {{ form_widget(settings_form.enabled) }}
+                        {{ form_widget(settings_form.collect_phases) }}
                     </div>
                 </div>
             </form>
