--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/create.html.twig
@@ -11,6 +11,7 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 {% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
+{% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import generic %}
 
 {% block content %}
     {{ page_title('accard.diagnosis.action.create'|trans)}}
@@ -32,6 +33,43 @@
 {% block javascripts %}
     {{ parent() }}
     {{ select_patient_js('#accard_diagnosis_patient') }}
+    <script type="text/javascript">
+        var formClass = Accard.get('form');
+        var manager = new formClass('form');
+        var addPhase = $('#add-phase').hide();
+
+        $('a[data-toggle="tab"]').on('shown.bs.tab', function(event) {
+            if (event.target.href.indexOf('diagnosis-phase') != -1) {
+                addPhase.fadeIn();
+            } else {
+                addPhase.fadeOut();
+            }
+        });
+
+        function makeToday() {
+            var now = new Date();
+            var day = ("0" + now.getDate()).slice(-2);
+            var month = ("0" + now.getMonth()).slice(-2);
+
+            return now.getFullYear() + "-" + (month) + "-" + (day);
+        }
+
+        manager
+            .collection("#phases", {
+                adder: addPhase,
+                startup: function(collection) {
+                    var field = $(this).find('input[type="date"]').first();
+
+                    if (!field.val()) field.val(makeToday());
+                    $(this).on('click', '.input-group-addon', function(event) {
+                        var prev = $(this).prev();
+                        $(prev).val(makeToday());
+                    });
+                }
+            })
+           .bindAll()
+        ;
+    </script>
 {% endblock %}
 
 {% block stylesheets %}
