--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/form.html.twig
@@ -8,23 +8,65 @@
 </div>
 {% endif %}
 
-<div class="row">
-    <div class="col-md-6">
-        {{ form_row(form.code) }}
-        {{ form_row(form.startDate) }}
-        {% if form.endDate is defined %}
-            {{ form_row(form.endDate, {
-                help_block: 'accard.patient.form.end_date_help'|trans
+
+{% macro render_field(field) %}
+    {{ form_widget(field) }}
+{% endmacro %}
+
+{% macro phase_form(phase) %}
+{% spaceless %}
+
+    <div class="row">
+        <div class="col-md-4">
+            {{ form_widget(phase.phase) }}
+        </div>
+        <div class="col-md-3">
+            {{ form_widget(phase.startDate) }}
+        </div>
+        <div class="col-md-3">
+            {{ form_widget(phase.endDate, {
+                'widget_addon_append': { icon: 'calendar' }
             }) }}
-        {% endif %}
+        </div>
     </div>
-    <div class="col-md-6">
-        {% for field in form.fields %}
-            <div class="field-hider">
-                {{ form_widget(field) }}
+    <hr>
+
+{% endspaceless %}
+{% endmacro %}
+
+{% from _self import render_field %}
+{% include 'AccardWebBundle:Frontend/Diagnosis:formTabs.html.twig' %}
+
+<div class="tab-content">
+    <div class="tab-pane fade in active" id="diagnosis-base">
+        <div class="row">
+            <div class="col-md-6">
+                {{ form_row(form.code) }}
+                {{ form_row(form.startDate) }}
+                {% if form.endDate is defined %}
+                    {{ form_row(form.endDate, {
+                        help_block: 'accard.diagnosis.form.end_date_help'|trans
+                    }) }}
+                {% endif %}
             </div>
-        {% endfor %}
+            <div class="col-md-6">
+                {% for field in form.fields %}
+                    <div class="field-hider">
+                        {{ form_widget(field) }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
+    {% if accard_setting('diagnosis.collect_phases') %}
+    <div class="tab-pane fade" id="diagnosis-phases">
+        <div class="row">
+            <div id="phases" data-prototype="{{ _self.phase_form(form.phases.vars.prototype)|e }}">
+            {% for phase in form.phases %}
+                {{ _self.phase_form(phase) }}
+            {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
-
-
