Created multiple choice option selector fields.

--- a/src/Bundle/WebBundle/Resources/views/Backend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Patient/form.html.twig
@@ -14,5 +14,6 @@
     <div class="col-md-6">
         {{ form_row(form.type) }}
         {{ form_row(form.option) }}
+        {{ form_row(form.allowMultiple) }}
     </div>
 </div>
