--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
@@ -6,12 +6,13 @@
 {# file that was distributed with this source code. #}
 
 {% set count = form.fields|length %}
+{% set half_count = (count/2)|round(0, 'ceil') %}
 
 {% if count > 0 %}
-    {% set row1fields = form.fields|slice(0, count/2) %}
+    {% set row1fields = form.fields|slice(0, half_count) %}
 {% endif %}
 {% if count > 1 %}
-    {% set row2fields = form.fields|slice(count/2, count) %}
+    {% set row2fields = form.fields|slice(half_count, count) %}
 {% endif %}
 
 <div class="row">
