--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldCreate.html.twig
@@ -5,45 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'AccardWebBundle:Backend:layout.html.twig' %}
+{% extends 'AccardWebBundle:Common/Form:fieldCreate.html.twig' %}
 
-{% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
-{% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
-{% from 'AccardWebBundle:Common/Macros:misc.html.twig' import pagination, page_title, statistics %}
-
-{% block content %}
-
-    {{ page_title('accard.activity_prototype_field.action.create'|trans) }}
-
-    {{ no_javascript() }}
-    {{ form_errors(form) }}
-
-    <form action="{{ path('accard_backend_activity_field_create') }}" method="post" {{ form_enctype(form) }}>
-        {% include 'AccardWebBundle:Backend/Activity:fieldForm.html.twig' %}
-        <div class="row">
-            <div class="col-md-12">
-                <span class="pull-right">{{ create() }}</span>
-            </div>
-        </div>
-    </form>
-
-{% endblock %}
-
-
-{% block page_javascripts %}
-
-<script type="text/javascript">
-    var former = Accard.get("form");
-    var manager = new former($('form'));
-
-    manager
-        .behavior('presentation', {
-            target: 'name',
-            condition: 'changed',
-            action: 'slug',
-            event: 'keyup'
-        })
-        .bindAll();
-</script>
-
-{% endblock %}
+{% block form_page_title_translation 'accard.activity_prototype_field.action.create'|trans %}
+{% block form_submit_action path('accard_backend_activity_field_create') %}
