--- a/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeUpdate.html.twig
@@ -5,7 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'AccardWebBundle:Common/Form:fieldCreate.html.twig' %}
+{% extends 'AccardWebBundle:Common/Form:prototypeCreate.html.twig' %}
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 
@@ -14,7 +14,7 @@
     Page title translation.
 #}
 
-{% block form_page_title_translation 'accard.field.action.update'|trans %}
+{% block form_page_title_translation 'accard.prototype.action.update'|trans %}
 
 
 {#
