--- a/src/Bundle/WebBundle/Resources/views/Backend/Sample/prototypeCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Sample/prototypeCreate.html.twig
@@ -5,50 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'AccardWebBundle:Backend:layout.html.twig' %}
+{% extends 'AccardWebBundle:Common/Form:prototypeCreate.html.twig' %}
 
-{% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
-{% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
-{% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
-
-
-{% block content %}
-
-    {{ page_title('accard.sample_prototype.action.create'|trans) }}
-
-    {{ no_javascript() }}
-    {{ form_errors(form) }}
-
-    <form action="{{ path('accard_backend_sample_prototype_create') }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form._token) }}
-        {% include 'AccardWebBundle:Backend/Sample:prototypeForm.html.twig' %}
-        <div class="row">
-            <div class="col-md-12">
-                <span class="pull-right">{{ create() }}</span>
-            </div>
-        </div>
-    </form>
-
-{% endblock %}
-
-
-{% block page_javascripts %}
-
-<script type="text/javascript">
-    var former = Accard.get("form");
-    var manager = new former($('form'));
-
-    manager
-        .behavior('presentation', {
-            target: 'name',
-            condition: 'changed',
-            action: 'slug',
-            event: 'keyup'
-        })
-        .collection("#accard-prototype-fields", {
-          adder: $("#accard-prototype-field-adder")
-        })
-        .bindAll();
-</script>
-
-{% endblock %}
+{% block form_page_title_translation 'accard.sample_prototype.action.create'|trans %}
+{% block form_submit_action path('accard_backend_sample_prototype_create') %}
