--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/design.html.twig
@@ -9,7 +9,7 @@
 
 {% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
-{% from 'AccardWebBundle:Backend/Activity:macros.html.twig' import list_prototypes, list_fields %}
+{% from 'AccardWebBundle:Common/Macros:fields.html.twig' import list_prototypes, list_fields %}
 
 {% macro action_buttons() %}
     <div class="btn-group">
@@ -55,7 +55,7 @@
                         {{- 'accard.activity_prototype.title.list'|trans -}}
                     </h4>
                 </div>
-                {{ list_prototypes(prototypes) }}
+                {{ list_prototypes(prototypes, 'accard_backend_activity_prototype_update', 'accard_backend_activity_prototype_delete') }}
             </div>
         </div>
         <div id="fields" class="tab-pane fade{{ _self.active_tab('field', ' in active') }}">
@@ -65,7 +65,7 @@
                         {{- 'accard.activity_field.title.list'|trans -}}
                     </h4>
                 </div>
-                {{ list_fields(fields) }}
+                {{ list_fields(fields, 'accard_backend_activity_field_update', 'accard_backend_activity_field_delete') }}
             </div>
         </div>
         <div id="settings" class="tab-pane fade{{ _self.active_tab('settings', ' in active') }}">
